# OpenGLLessons

./: CMakeLists.txt
res/shaders/: fragment.glsl  vertex.glsl
src/: main.cpp
src/renderer/: shaders.cpp  shaders.h  texture2D.cpp  texture2D.h  window.cpp  window.h
src/resourses/: resourseManager.cpp  resourseManager.h
